[package]
name = "uwuify"
version = "0.2.2"
authors = ["c0deb0t <daniel.liu02@gmail.com>"]
edition = "2021"
license = "MIT"
description = "fastest text uwuifier in the west"
homepage = "https://github.com/Daniel-Liu-c0deb0t/uwu"
repository = "https://github.com/Daniel-Liu-c0deb0t/uwu"
readme = "README.md"
keywords = ["SIMD", "uwu", "owo", "cli"]
categories = [
	"algorithms",
	"hardware-support",
	"text-processing",
	"command-line-utilities",
]

[dependencies]
clap = { version = "4.5.2", optional = true }
owo-colors = { version = "4.0.0", optional = true }
thiserror = { version = "1.0.57", optional = true }
parking_lot = "0.12.1"

[features]
default = ["bin"]
bin = ["clap", "owo-colors", "thiserror"]

[profile.release]
lto = true

[lib]
name = "uwuifier"
path = "src/lib.rs"

[[bin]]
name = "uwuify"
path = "src/main.rs"
required-features = ["bin"]
